# 32-bit-micro-processor

./: .gitignore  ASM_TESTBENCH_CLARIFICATION.md  AUTOMATED_TESTING_SYSTEM.md  CLEANUP_GUIDE.md  COMPILER_PROCESSOR_ENHANCEMENT_REPORT.md  DISPLAY_SYSTEM_README.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  MAC_GRAPHICS_README.md  Makefile  README.md  SORTING_REPORT.md  TestInstructionDecoder.java  absolute_minimal.asm  absolute_minimal.c  advanced_test.hex  alu_demo  alu_test.vvp  animation_generator.py  array_sort_final  assembler_debug_writeup.md  assembler_load_store_fix_writeup.md  basic_test.vvp  bubble_sort  bubble_sort.vcd  bubble_sort_real.hex  build.sh  build_cli_demo.sh  build_display_system.sh  build_jvm.sh  c_test_runner.py  comprehensive_final_sim  comprehensive_test.hex  comprehensive_test_full.hex  convert.py  corrected_simple_test  cpu_test.vvp  create_animation.py  ctrl_test.vvp  debug_assembly.py  (+89 more)
AruviAsm/: Makefile  assembler  assembler.c
AruviCompiler/: Makefile  README.md  ast.c  codegen.c  codegen.h  jvm_bytecode_test.c  lexer.h  main.c  parser.c  stack_vm.c  test_bool.c  test_compound_new.c  test_error_recovery.c  test_pointer_arithmetic.c  (+6 more)
AruviOS/kernel/: Cargo.toml  build.rs  x86_64-aruvios.json
AruviOS/kernel-rv32/: Cargo.toml  README.md  build.rs  build_rv32.sh  riscv32-aruvios.json  send_command.sh  start.sh
AruviOS/kernel-rv32/.cargo/: config.toml
AruviOS/kernel-rv32/src/: boot.S  linker.ld  main.rs  shell.rs  uart.rs
AruviOS/kernel/.cargo/: config.toml
AruviOS/kernel/src/: keyboard.rs  linker.ld  main.rs  serial.rs  vga.rs
(+804 files in other folders)
